# AMRS-exercises

./: .gitignore  CMakeLists.txt  ControlSystem.cpp  ControlSystem.hpp  MainSequence.hpp  MyRobotSafetyProperties.cpp  MyRobotSafetyProperties.hpp  README.md  clean.sh  clone.sh  config.sh.in  deploy.sh  deploy.txt  main.cpp  make.sh
config/: HwConfigBBBlue.json
inc/: AMRSConstants.hpp  ControlSystem.hpp  MainSequence.hpp  MyRobotSafetyProperties.hpp
inc/customBlocks/: EuclideanNorm.hpp  InvKin.hpp  InvMotMod.hpp  KalmanFilter.hpp  LowPassFilter.hpp  PD_controller.hpp  PIController.hpp  PositionController.hpp  ServoController.hpp  TCPVectorPositionController.hpp  fwKinOdom.hpp
inc/customSequences/: customSequenceTemplate.hpp
inc/customSteps/: MoveServo.hpp  MoveTo.hpp  customStepTemplate.hpp
src/: ControlSystem.cpp  MyRobotSafetyProperties.cpp  main.cpp
template_project/: CMakeLists.txt
template_project/config/: HwConfigBBBlue.json
template_project/inc/customBlocks/: customBlockTemplate.hpp
template_project/inc/customSequences/: customSequenceTemplate.hpp
template_project/inc/customSteps/: customStepTemplate.hpp
